# libtarparse

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  run_fuzzer.sh  run_tests.sh
.github/workflows/: package-header-only.yml  run-format.yml  run-tests.yml  run-tidy.yml
scripts/: create_release_header.sh  run_format.sh  run_fuzzer.sh  run_lint.sh  run_tests.sh
src/fuzz/: main.cpp  target.cpp
src/include/tarparse/: parse.hpp
src/include/tarparse/internal/: numparse.hpp  util.hpp
src/test/: fileio.hpp  test-num-parser.cpp  test-tar-parser.cpp
src/test/test-data/: artifact-corrupted-archive.tar  artifact-corrupted-inner-data-archive.tar  non-terminated-filename.tar  test.tar
src/test/test-data/test-tar-extracted/: header.tar  manifest  version
src/test/test-data/test-tar-extracted/data/: 0000.tar
